Tiger_frontend/generated/tigerParser.cpp

// Generated from tiger.g4 by ANTLR 4.7


#include "tigerListener.h"
#include "tigerVisitor.h"

#include "tigerParser.h"


using namespace antlrcpp;
using namespace antlr4;

tigerParser::tigerParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

tigerParser::~tigerParser() {
  delete _interpreter;
}

std::string tigerParser::getGrammarFileName() const {
  return "tiger.g4";
}

const std::vector<std::string>& tigerParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& tigerParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgramContext ------------------------------------------------------------------

tigerParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* tigerParser::ProgramContext::MAIN() {
  return getToken(tigerParser::MAIN, 0);
}

tree::TerminalNode* tigerParser::ProgramContext::LET() {
  return getToken(tigerParser::LET, 0);
}

tigerParser::DeclarationSegmentContext* tigerParser::ProgramContext::declarationSegment() {
  return getRuleContext<tigerParser::DeclarationSegmentContext>(0);
}

tree::TerminalNode* tigerParser::ProgramContext::IN() {
  return getToken(tigerParser::IN, 0);
}

tree::TerminalNode* tigerParser::ProgramContext::BEGIN() {
  return getToken(tigerParser::BEGIN, 0);
}

tigerParser::StatSeqContext* tigerParser::ProgramContext::statSeq() {
  return getRuleContext<tigerParser::StatSeqContext>(0);
}

tree::TerminalNode* tigerParser::ProgramContext::END() {
  return getToken(tigerParser::END, 0);
}


size_t tigerParser::ProgramContext::getRuleIndex() const {
  return tigerParser::RuleProgram;
}

void tigerParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tigerListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void tigerParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tigerListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}


antlrcpp::Any tigerParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<tigerVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

tigerParser::ProgramContext* tigerParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, tigerParser::RuleProgram);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(56);
    match(tigerParser::MAIN);
    setState(57);
    match(tigerParser::LET);
    setState(58);
    declarationSegment();
    setState(59);
    match(tigerParser::IN);
    setState(60);
    match(tigerParser::BEGIN);
    setState(61);
    statSeq();
    setState(62);
    match(tigerParser::END);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclarationSegmentContext ------------------------------------------------------------------

tigerParser::DeclarationSegmentContext::DeclarationSegmentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tigerParser::TypeDeclarationListContext* tigerParser::DeclarationSegmentContext::typeDeclarationList() {
  return getRuleContext<tigerParser::TypeDeclarationListContext>(0);
}

tigerParser::VarDeclarationListContext* tigerParser::DeclarationSegmentContext::varDeclarationList() {
  return getRuleContext<tigerParser::VarDeclarationListContext>(0);
}

tigerParser::FunctionDeclarationListContext* tigerParser::DeclarationSegmentContext::functionDeclarationList() {
  return getRuleContext<tigerParser::FunctionDeclarationListContext>(0);
}


size_t tigerParser::DeclarationSegmentContext::getRuleIndex() const {
  return tigerParser::RuleDeclarationSegment;
}

void tigerParser::DeclarationSegmentContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tigerListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDeclarationSegment(this);
}

void tigerParser::DeclarationSegmentContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tigerListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDeclarationSegment(this);
}


antlrcpp::Any tigerParser::DeclarationSegmentContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<tigerVisitor*>(visitor))
    return parserVisitor->visitDeclarationSegment(this);
  else
    return visitor->visitChildren(this);
}

tigerParser::DeclarationSegmentContext* tigerParser::declarationSegment() {
  DeclarationSegmentContext *_localctx = _tracker.createInstance<DeclarationSegmentContext>(_ctx, getState());
  enterRule(_localctx, 2, tigerParser::RuleDeclarationSegment);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(64);
    typeDeclarationList();
    setState(65);
    varDeclarationList();
    setState(66);
    functionDeclarationList();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeDeclarationListContext ------------------------------------------------------------------

tigerParser::TypeDeclarationListContext::TypeDeclarationListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tigerParser::TypeDeclarationContext* tigerParser::TypeDeclarationListContext::typeDeclaration() {
  return getRuleContext<tigerParser::TypeDeclarationContext>(0);
}

tigerParser::TypeDeclarationListContext* tigerParser::TypeDeclarationListContext::typeDeclarationList() {
  return getRuleContext<tigerParser::TypeDeclarationListContext>(0);
}


size_t tigerParser::TypeDeclarationListContext::getRuleIndex() const {
  return tigerParser::RuleTypeDeclarationList;
}

void tigerParser::TypeDeclarationListContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tigerListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTypeDeclarationList(this);
}

void tigerParser::TypeDeclarationListContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tigerListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTypeDeclarationList(this);
}


antlrcpp::Any tigerParser::TypeDeclarationListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<tigerVisitor*>(visitor))
    return parserVisitor->visitTypeDeclarationList(this);
  else
    return visitor->visitChildren(this);
}

tigerParser::TypeDeclarationListContext* tigerParser::typeDeclarationList() {
  TypeDeclarationListContext *_localctx = _tracker.createInstance<TypeDeclarationListContext>(_ctx, getState());
  enterRule(_localctx, 4, tigerParser::RuleTypeDeclarationList);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(72);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case tigerParser::FUNCTION:
      case tigerParser::IN:
      case tigerParser::VAR: {
        enterOuterAlt(_localctx, 1);

        break;
      }

      case tigerParser::TYPE: {
        enterOuterAlt(_localctx, 2);
        setState(69);
        typeDeclaration();
        setState(70);
        typeDeclarationList();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarDeclarationListContext ------------------------------------------------------------------

tigerParser::VarDeclarationListContext::VarDeclarationListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tigerParser::VarDeclarationContext* tigerParser::VarDeclarationListContext::varDeclaration() {
  return getRuleContext<tigerParser::VarDeclarationContext>(0);
}

tigerParser::VarDeclarationListContext* tigerParser::VarDeclarationListContext::varDeclarationList() {
  return getRuleContext<tigerParser::VarDeclarationListContext>(0);
}


size_t tigerParser::VarDeclarationListContext::getRuleIndex() const {
  return tigerParser::RuleVarDeclarationList;
}

void tigerParser::VarDeclarationListContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tigerListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVarDeclarationList(this);
}

void tigerParser::VarDeclarationListContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tigerListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVarDeclarationList(this);
}


antlrcpp::Any tigerParser::VarDeclarationListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<tigerVisitor*>(visitor))
    return parserVisitor->visitVarDeclarationList(this);
  else
    return visitor->visitChildren(this);
}

tigerParser::VarDeclarationListContext* tigerParser::varDeclarationList() {
  VarDeclarationListContext *_localctx = _tracker.createInstance<VarDeclarationListContext>(_ctx, getState());
  enterRule(_localctx, 6, tigerParser::RuleVarDeclarationList);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(78);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case tigerParser::FUNCTION:
      case tigerParser::IN: {
        enterOuterAlt(_localctx, 1);

        break;
      }

      case tigerParser::VAR: {
        enterOuterAlt(_localctx, 2);
        setState(75);
        varDeclaration();
        setState(76);
        varDeclarationList();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionDeclarationListContext ------------------------------------------------------------------

tigerParser::FunctionDeclarationListContext::FunctionDeclarationListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tigerParser::FunctionDeclarationContext* tigerParser::FunctionDeclarationListContext::functionDeclaration() {
  return getRuleContext<tigerParser::FunctionDeclarationContext>(0);
}

tigerParser::FunctionDeclarationListContext* tigerParser::FunctionDeclarationListContext::functionDeclarationList() {
  return getRuleContext<tigerParser::FunctionDeclarationListContext>(0);
}


size_t tigerParser::FunctionDeclarationListContext::getRuleIndex() const {
  return tigerParser::RuleFunctionDeclarationList;
}

void tigerParser::FunctionDeclarationListContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tigerListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunctionDeclarationList(this);
}

void tigerParser::FunctionDeclarationListContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tigerListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunctionDeclarationList(this);
}


antlrcpp::Any tigerParser::FunctionDeclarationListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<tigerVisitor*>(visitor))
    return parserVisitor->visitFunctionDeclarationList(this);
  else
    return visitor->visitChildren(this);
}

tigerParser::FunctionDeclarationListContext* tigerParser::functionDeclarationList() {
  FunctionDeclarationListContext *_localctx = _tracker.createInstance<FunctionDeclarationListContext>(_ctx, getState());
  enterRule(_localctx, 8, tigerParser::RuleFunctionDeclarationList);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(84);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case tigerParser::IN: {
        enterOuterAlt(_localctx, 1);

        break;
      }

      case tigerParser::FUNCTION: {
        enterOuterAlt(_localctx, 2);
        setState(81);
        functionDeclaration();
        setState(82);
        functionDeclarationList();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeDeclarationContext ------------------------------------------------------------------

tigerParser::TypeDeclarationContext::TypeDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* tigerParser::TypeDeclarationContext::TYPE() {
  return getToken(tigerParser::TYPE, 0);
}

tree::TerminalNode* tigerParser::TypeDeclarationContext::ID() {
  return getToken(tigerParser::ID, 0);
}

tree::TerminalNode* tigerParser::TypeDeclarationContext::ASSIGN() {
  return getToken(tigerParser::ASSIGN, 0);
}

tigerParser::TypeContext* tigerParser::TypeDeclarationContext::type() {
  return getRuleContext<tigerParser::TypeContext>(0);
}

tree::TerminalNode* tigerParser::TypeDeclarationContext::SEMI() {
  return getToken(tigerParser::SEMI, 0);
}


size_t tigerParser::TypeDeclarationContext::getRuleIndex() const {
  return tigerParser::RuleTypeDeclaration;
}

void tigerParser::TypeDeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tigerListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTypeDeclaration(this);
}

void tigerParser::TypeDeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tigerListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTypeDeclaration(this);
}


antlrcpp::Any tigerParser::TypeDeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<tigerVisitor*>(visitor))
    return parserVisitor->visitTypeDeclaration(this);
  else
    return visitor->visitChildren(this);
}

tigerParser::TypeDeclarationContext* tigerParser::typeDeclaration() {
  TypeDeclarationContext *_localctx = _tracker.createInstance<TypeDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 10, tigerParser::RuleTypeDeclaration);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(86);
    match(tigerParser::TYPE);
    setState(87);
    match(tigerParser::ID);
    setState(88);
    match(tigerParser::ASSIGN);
    setState(89);
    type();
    setState(90);
    match(tigerParser::SEMI);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeContext ------------------------------------------------------------------

tigerParser::TypeContext::TypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tigerParser::TypeIdContext* tigerParser::TypeContext::typeId() {
  return getRuleContext<tigerParser::TypeIdContext>(0);
}

tree::TerminalNode* tigerParser::TypeContext::ARRAY() {
  return getToken(tigerParser::ARRAY, 0);
}

tree::TerminalNode* tigerParser::TypeContext::LBRACK() {
  return getToken(tigerParser::LBRACK, 0);
}

tree::TerminalNode* tigerParser::TypeContext::INTLIT() {
  return getToken(tigerParser::INTLIT, 0);
}

tree::TerminalNode* tigerParser::TypeContext::RBRACK() {
  return getToken(tigerParser::RBRACK, 0);
}

tree::TerminalNode* tigerParser::TypeContext::OF() {
  return getToken(tigerParser::OF, 0);
}

tree::TerminalNode* tigerParser::TypeContext::ID() {
  return getToken(tigerParser::ID, 0);
}


size_t tigerParser::TypeContext::getRuleIndex() const {
  return tigerParser::RuleType;
}

void tigerParser::TypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tigerListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterType(this);
}

void tigerParser::TypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tigerListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitType(this);
}


antlrcpp::Any tigerParser::TypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<tigerVisitor*>(visitor))
    return parserVisitor->visitType(this);
  else
    return visitor->visitChildren(this);
}

tigerParser::TypeContext* tigerParser::type() {
  TypeContext *_localctx = _tracker.createInstance<TypeContext>(_ctx, getState());
  enterRule(_localctx, 12, tigerParser::RuleType);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(100);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case tigerParser::INT:
      case tigerParser::FLOAT: {
        enterOuterAlt(_localctx, 1);
        setState(92);
        typeId();
        break;
      }

      case tigerParser::ARRAY: {
        enterOuterAlt(_localctx, 2);
        setState(93);
        match(tigerParser::ARRAY);
        setState(94);
        match(tigerParser::LBRACK);
        setState(95);
        match(tigerParser::INTLIT);
        setState(96);
        match(tigerParser::RBRACK);
        setState(97);
        match(tigerParser::OF);
        setState(98);
        typeId();
        break;
      }

      case tigerParser::ID: {
        enterOuterAlt(_localctx, 3);
        setState(99);
        match(tigerParser::ID);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeIdContext ------------------------------------------------------------------

tigerParser::TypeIdContext::TypeIdContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* tigerParser::TypeIdContext::INT() {
  return getToken(tigerParser::INT, 0);
}

tree::TerminalNode* tigerParser::TypeIdContext::FLOAT() {
  return getToken(tigerParser::FLOAT, 0);
}


size_t tigerParser::TypeIdContext::getRuleIndex() const {
  return tigerParser::RuleTypeId;
}

void tigerParser::TypeIdContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tigerListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTypeId(this);
}

void tigerParser::TypeIdContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tigerListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTypeId(this);
}


antlrcpp::Any tigerParser::TypeIdContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<tigerVisitor*>(visitor))
    return parserVisitor->visitTypeId(this);
  else
    return visitor->visitChildren(this);
}

tigerParser::TypeIdContext* tigerParser::typeId() {
  TypeIdContext *_localctx = _tracker.createInstance<TypeIdContext>(_ctx, getState());
  enterRule(_localctx, 14, tigerParser::RuleTypeId);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(102);
    _la = _input->LA(1);
    if (!(_la == tigerParser::INT

    || _la == tigerParser::FLOAT)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarDeclarationContext ------------------------------------------------------------------

tigerParser::VarDeclarationContext::VarDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* tigerParser::VarDeclarationContext::VAR() {
  return getToken(tigerParser::VAR, 0);
}

tigerParser::IdListContext* tigerParser::VarDeclarationContext::idList() {
  return getRuleContext<tigerParser::IdListContext>(0);
}

tree::TerminalNode* tigerParser::VarDeclarationContext::COLON() {
  return getToken(tigerParser::COLON, 0);
}

tigerParser::TypeContext* tigerParser::VarDeclarationContext::type() {
  return getRuleContext<tigerParser::TypeContext>(0);
}

tigerParser::OptionalInitContext* tigerParser::VarDeclarationContext::optionalInit() {
  return getRuleContext<tigerParser::OptionalInitContext>(0);
}

tree::TerminalNode* tigerParser::VarDeclarationContext::SEMI() {
  return getToken(tigerParser::SEMI, 0);
}


size_t tigerParser::VarDeclarationContext::getRuleIndex() const {
  return tigerParser::RuleVarDeclaration;
}

void tigerParser::VarDeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tigerListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVarDeclaration(this);
}

void tigerParser::VarDeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tigerListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVarDeclaration(this);
}


antlrcpp::Any tigerParser::VarDeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<tigerVisitor*>(visitor))
    return parserVisitor->visitVarDeclaration(this);
  else
    return visitor->visitChildren(this);
}

tigerParser::VarDeclarationContext* tigerParser::varDeclaration() {
  VarDeclarationContext *_localctx = _tracker.createInstance<VarDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 16, tigerParser::RuleVarDeclaration);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(104);
    match(tigerParser::VAR);
    setState(105);
    idList();
    setState(106);
    match(tigerParser::COLON);
    setState(107);
    type();
    setState(108);
    optionalInit();
    setState(109);
    match(tigerParser::SEMI);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IdListContext ------------------------------------------------------------------

tigerParser::IdListContext::IdListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* tigerParser::IdListContext::ID() {
  return getToken(tigerParser::ID, 0);
}

tree::TerminalNode* tigerParser::IdListContext::COMMA() {
  return getToken(tigerParser::COMMA, 0);
}

tigerParser::IdListContext* tigerParser::IdListContext::idList() {
  return getRuleContext<tigerParser::IdListContext>(0);
}


size_t tigerParser::IdListContext::getRuleIndex() const {
  return tigerParser::RuleIdList;
}

void tigerParser::IdListContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tigerListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIdList(this);
}

void tigerParser::IdListContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tigerListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIdList(this);
}


antlrcpp::Any tigerParser::IdListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<tigerVisitor*>(visitor))
    return parserVisitor->visitIdList(this);
  else
    return visitor->visitChildren(this);
}

tigerParser::IdListContext* tigerParser::idList() {
  IdListContext *_localctx = _tracker.createInstance<IdListContext>(_ctx, getState());
  enterRule(_localctx, 18, tigerParser::RuleIdList);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(115);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(111);
      match(tigerParser::ID);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(112);
      match(tigerParser::ID);
      setState(113);
      match(tigerParser::COMMA);
      setState(114);
      idList();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- OptionalInitContext ------------------------------------------------------------------

tigerParser::OptionalInitContext::OptionalInitContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* tigerParser::OptionalInitContext::ASSIGN() {
  return getToken(tigerParser::ASSIGN, 0);
}

tigerParser::ConstRuleContext* tigerParser::OptionalInitContext::constRule() {
  return getRuleContext<tigerParser::ConstRuleContext>(0);
}


size_t tigerParser::OptionalInitContext::getRuleIndex() const {
  return tigerParser::RuleOptionalInit;
}

void tigerParser::OptionalInitContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tigerListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterOptionalInit(this);
}

void tigerParser::OptionalInitContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<tigerListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitOptionalInit(this);
}


antlrcpp::Any tigerParser::OptionalInitContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<tigerVisitor*>(visitor))
    return parserVisitor->visitOptionalInit(this);
  else
    return visitor->visitChildren(this);
}

tigerParser::OptionalInitContext* tigerParser::optionalInit() {
  OptionalInitContext *_localctx = _tracker.createInstance<OptionalInitContext>(_ctx, getState());
  enterRule(_localctx, 20, tigerParser::RuleOptionalInit);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(120);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case tigerParser::SEMI: {
        enterOuterAlt(_localctx, 1);

        break;
      }

      case tigerParser::ASSIGN: {
        enterOuterAlt(_localctx, 2);
        setState(118);
        match(tigerParser::ASSIGN);
        setState(119);
        constRule();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionDeclarationContext ------------------------------------------------------------------

tigerParser::FunctionDeclarationContext::FunctionDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* tigerParser::FunctionDeclarationContext::FUNCTION() {
  return getToken(tigerParser::FUNCTION, 0);
}

tree::TerminalNode* tigerParser::FunctionDeclarationContext::ID() {
  return getToken(tigerParser::ID, 0);
}

tree::TerminalNode* tigerParser::FunctionDeclarationContext::LPAREN() {
  return getToken(tigerParser::LPAREN, 0);
}

tigerParser::ParamListContext* tigerParser::FunctionDeclarationContext::paramList() {
  return getRuleContext<tigerParser::ParamListContext>(0);
}

tree::TerminalNode* tigerParser::FunctionDeclarationContext::RPAREN() {
  return getToken(tigerParser::RPAREN, 0);
}

tigerParser::RetTypeContext* tigerParser::FunctionDeclarationContext::retType() {
  return getRuleContext<tigerParser::RetTypeContext>(0);
}

tree::TerminalNode* tigerParser::FunctionDeclarationContext::BEGIN() {
  return getToken(tigerParser::BEGIN, 0);
}

tigerParser::StatSeqContext* tigerParser::FunctionDeclarationContext::statSeq() {
  return getRuleContext<tigerParser::StatSeqContext>(0);
}
